Log all evaluation-information and view it

--- a/logViewer/logViewer.html
+++ b/logViewer/logViewer.html
@@ -1,70 +1,106 @@
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/modules/data.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8"> 
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/modules/data.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+</head>
+<body>
+    
 
-<pre id="csv" style="display:none"></pre>
+    <script>
+      function handleFiles(files) {
+        var reader = new FileReader();
+        reader.onload = function(){
+          document.getElementById('csv').innerHTML = reader.result;
+          hchart.update({
+                        data: {
+                            csv: document.getElementById('csv').innerHTML
+                        },
+                    })
+        };
+        reader.readAsText(files[0]);
+      }
+    </script>
+    <pre id="csv" style="display:none"></pre>
 
-<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-<script>
-var rawFile = new XMLHttpRequest();
-rawFile.open("GET", "explorationSingleThread.csv", false);
-rawFile.onreadystatechange = function (){
-	if(rawFile.readyState === 4){
-	    if(rawFile.status === 200 || rawFile.status == 0)
-	    {
-		var allText = rawFile.responseText;
-		document.getElementById("csv").innerHTML = allText;
-	    }
-	}
-}
-rawFile.send(null)
+    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+    
+    <input type="file" id="files" name="files[]" onchange="handleFiles(this.files)"/>
+    <script>
+    var rawFile = new XMLHttpRequest();
+    rawFile.open("GET", "explorationSingleThread.csv", false);
+    rawFile.onreadystatechange = function (){
+            if(rawFile.readyState === 4){
+                if(rawFile.status === 200 || rawFile.status == 0)
+                {
+                    var allText = rawFile.responseText;
+                    document.getElementById("csv").innerHTML = allText;
+                }
+            }
+    }
+    rawFile.send(null)
 
-Highcharts.chart('container', {
+    var hchart = Highcharts.chart('container', {
 
-    chart: {
-        zoomType: 'x'
-    },
-    title: {
-        text: 'Exploration'
-    },
-
-    subtitle: {
-        text: ''
-    },
-    xAxis: {
-            title: {
-		text: 'Cycle'
-		}
+        chart: {
+            zoomType: 'x'
         },
-        yAxis: {
-            title: {
-                text: '%Exploration'
+        title: {
+            text: 'Exploration'
+        },
+
+        subtitle: {
+            text: ''
+        },
+        xAxis: {
+                title: {
+                    text: 'Cycle'
+                }
+        },
+        yAxis: [{
+                title: {
+                    text: '%Exploration'
+                }
+        }, {
+                title: {
+                    text: 'Battery'
+                },
+                opposite: true,
+        }],
+
+        data: {
+            csv: document.getElementById('csv').innerHTML
+        },
+
+        plotOptions: {
+            series: {
+                marker: {
+                    enabled: false
+                }
             }
         },
 
-    data: {
-        csv: document.getElementById('csv').innerHTML
-    },
-
-    plotOptions: {
-        series: {
-            marker: {
-                enabled: false
-            }
-        }
-    },
-
-    series: [{
-	type: 'areaspline',
-        color: '#c4392d',
-        negativeColor: '#5679c4',
-        fillOpacity: 0.5
-    }, {
-        lineWidth: 1,
-	color: '#0000FF'
-    }, {
-	lineWidth: 1,
-	color: '#00FF00'
-    }]
-});
-</script>
+        series: [{
+            type: 'areaspline',
+            color: '#c4392d',
+            negativeColor: '#5679c4',
+            fillOpacity: 0.5
+        }, {
+            lineWidth: 1,
+            color: '#0000FF'
+        }, {
+            lineWidth: 1,
+            color: '#00FF00'
+        }, {
+            type: 'column'
+        }, {
+            type: 'line',
+            yAxis: 1,
+            color: '#AAAA25',
+            lineWidth: 1
+        }]
+    });
+    </script>
+</body>
+</html>
