--- a/logViewer/logViewer.html
+++ b/logViewer/logViewer.html
@@ -8,99 +8,106 @@
 <body>
     
 
-    <script>
-      function handleFiles(files) {
-        var reader = new FileReader();
-        reader.onload = function(){
-          document.getElementById('csv').innerHTML = reader.result;
-          hchart.update({
-                        data: {
-                            csv: document.getElementById('csv').innerHTML
-                        },
-                    })
-        };
-        reader.readAsText(files[0]);
-      }
-    </script>
     <pre id="csv" style="display:none"></pre>
 
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
     
-    <input type="file" id="files" name="files[]" onchange="handleFiles(this.files)"/>
+    <!--<input type="file" id="files" name="files[]" onchange="handleFiles(this.files)"/>-->
     <script>
-    var rawFile = new XMLHttpRequest();
-    rawFile.open("GET", "explorationSingleThread.csv", false);
-    rawFile.onreadystatechange = function (){
-            if(rawFile.readyState === 4){
-                if(rawFile.status === 200 || rawFile.status == 0)
-                {
-                    var allText = rawFile.responseText;
-                    document.getElementById("csv").innerHTML = allText;
-                }
-            }
+    function getParam(parameterName) {
+        var result = null,
+            tmp = [];
+        location.search
+            .substr(1)
+            .split("&")
+            .forEach(function (item) {
+              tmp = item.split("=");
+              if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
+            });
+        return result;
     }
-    rawFile.send(null)
 
-    var hchart = Highcharts.chart('container', {
-
-        chart: {
-            zoomType: 'x'
-        },
-        title: {
-            text: 'Exploration'
-        },
-
-        subtitle: {
-            text: ''
-        },
-        xAxis: {
-                title: {
-                    text: 'Cycle'
+    function handleFiles(file){
+        var rawFile = new XMLHttpRequest();
+        filename = getParam("file");
+        if(filename == null){
+            filename = "explorationSingleThread";
+        }
+        rawFile.open("GET", filename + ".csv", false);
+        rawFile.onreadystatechange = function (){
+                if(rawFile.readyState === 4){
+                    if(rawFile.status === 200 || rawFile.status == 0)
+                    {
+                        var allText = rawFile.responseText;
+                        document.getElementById("csv").innerHTML = allText;
+                    }
                 }
-        },
-        yAxis: [{
-                title: {
-                    text: '%Exploration'
+        }
+        rawFile.send(null)
+
+        var hchart = Highcharts.chart('container', {
+
+            chart: {
+                zoomType: 'x'
+            },
+            title: {
+                text: 'Exploration'
+            },
+
+            subtitle: {
+                text: ''
+            },
+            xAxis: {
+                    title: {
+                        text: 'Cycle'
+                    }
+            },
+            yAxis: [{
+                    title: {
+                        ceiling: 100,
+                        text: '%Exploration'
+                    }
+            }, {
+                    title: {
+                        text: 'Battery'
+                    },
+                    opposite: true,
+            }],
+
+            data: {
+                csv: document.getElementById('csv').innerHTML
+            },
+
+            plotOptions: {
+                series: {
+                    marker: {
+                        enabled: false
+                    }
                 }
-        }, {
-                title: {
-                    text: 'Battery'
-                },
-                opposite: true,
-        }],
+            },
 
-        data: {
-            csv: document.getElementById('csv').innerHTML
-        },
-
-        plotOptions: {
-            series: {
-                marker: {
-                    enabled: false
-                }
-            }
-        },
-
-        series: [{
-            type: 'areaspline',
-            color: '#c4392d',
-            negativeColor: '#5679c4',
-            fillOpacity: 0.5
-        }, {
-            lineWidth: 1,
-            color: '#0000FF'
-        }, {
-            lineWidth: 1,
-            color: '#00FF00'
-        }, {
-            type: 'column'
-        }, {
-            type: 'line',
-            yAxis: 1,
-            color: '#AAAA25',
-            lineWidth: 1
-        }]
-    });
+            series: [{
+                type: 'areaspline',
+                color: '#c4392d',
+                negativeColor: '#5679c4',
+                fillOpacity: 0.5
+            }, {
+                lineWidth: 1,
+                color: '#0000FF'
+            }, {
+                lineWidth: 1,
+                color: '#00FF00'
+            }, {
+                type: 'column'
+            }, {
+                type: 'line',
+                yAxis: 1,
+                color: '#AAAA25',
+                lineWidth: 1
+            }]
+        });
+    }
+    handleFiles("");
     </script>
 </body>
 </html>
